Atualização das classes